--- a/styles.css
+++ b/styles.css
@@ -138,11 +138,9 @@ body {
     display: block;
     transition: 0.3s;
   }
-  
-  .sidenav h4:hover {
+  .sidenav span:hover {
     color: #f1f1f1;
   }
-  
   .sidenav .closebtn {
     position: absolute;
     top: 0;
