--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,24 @@ body {
       background-color: #53A4CF
     }
 
+  #error-wrapper {
+    text-align: center;
+  }
+
+  .error-message {
+    background-color: #EA5737;
+    display: inline-block;
+    border-radius: 40px;
+  }
+
+  #error-holder {
+    color: white;
+    text-align: center;
+    max-width: 500px;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
   .in-line-buttons {
     display: flex;
     justify-content: center;
