--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ body {
     margin: 0 auto;
     height: 120px;
     /* position: fixed; */
-    display: block;
+    display: grid;
+    
     /* background-image: url("https://cdn.evbuc.com/eventlogos/180190045/pokemonpokeball.jpg"); */
   }
 
@@ -17,7 +18,12 @@ body {
     margin-left: auto;
     margin-right: auto;
     display: block;
+    grid-area: 1 / 2 / span 2 / span 1;
     /* width: 400px; */
+  }
+
+  img.login {
+    grid-area: 1 / 1 / span 2 / span 1;
   }
 
   .center {
@@ -105,6 +111,8 @@ body {
     display: block;
   }
 
+  
+
   #hamburger-main {
     transition: margin-left .5s;
     padding: 16px;
@@ -153,6 +161,14 @@ body {
     margin-left: 50px;
   }
 
+  #delete-nav{
+    margin-left: 20px;
+  }
+
+  #delete-nav:hover {
+    color: red;
+  }
+
   main.login {
     display: grid;
 
@@ -190,9 +206,11 @@ body {
   }
 
   .logout {
-    float: right;
-    margin: 20px;
+    margin-top: auto;
     display: block;
+    grid-area: 1 / 4 / span 1 / span 1;
+    height: 40px;
+    background-color: rgb(46, 96, 180);
   }
 
   .hidden {
@@ -312,13 +330,28 @@ body {
     display: block;
   } */
 
-  @media only screen and (min-width: 500px) {
+  @media only screen and (max-width: 670px) {
+    main {
+      grid-template-columns: 1fr;
+    }
+    .trainer {
+      display: none;
+    }
+  }
+
+  @media only screen and (min-width: 670px) and (max-width: 999px) {
     main {
       grid-template-columns: 1fr 1fr;
     }
   }
 
-  @media only screen and (min-width: 850px) {
+  @media only screen and (max-width: 1350px) and (min-width: 999px) {
+    main{
+      grid-template-columns: 1fr 1fr 1fr 
+    }
+  }
+
+  @media only screen and (min-width: 1350px) {
     main {
       grid-template-columns: 1fr 1fr 1fr 1fr;
     }
