--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
   header img {
     padding-bottom: 10px;
-    margin-left: auto;
+    /* margin-left: auto; */
     margin-right: auto;
     display: block;
     grid-area: 1 / 2 / span 2 / span 1;
@@ -26,6 +26,7 @@ body {
 
   img.login {
     grid-area: 1 / 1 / span 2 / span 1;
+    margin-left: auto;  
   }
 
   .center {
@@ -73,6 +74,16 @@ body {
     border: 5px black;
   }
 
+  .trainer {
+    font-size:30px;
+    color:rgb(255,198,3);
+    margin-right: 2px;
+  }
+
+  #search{
+    max-width: 450px;
+  }
+
   .front-name {
     margin: 0px;
     text-align: center;
@@ -118,6 +129,7 @@ body {
   #hamburger-main {
     transition: margin-left .5s;
     padding: 16px;
+    max-width: 450px;
   }
   .sidenav {
     height: 100%;
