--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     height: 120px;
     /* position: fixed; */
     display: grid;
-    
+
     /* background-image: url("https://cdn.evbuc.com/eventlogos/180190045/pokemonpokeball.jpg"); */
   }
 
@@ -26,7 +26,7 @@ body {
 
   img.login {
     grid-area: 1 / 1 / span 2 / span 1;
-    margin-left: auto;  
+    margin-left: auto;
   }
 
   .center {
@@ -124,8 +124,6 @@ body {
     display: block;
   }
 
-  
-
   #hamburger-main {
     transition: margin-left .5s;
     padding: 16px;
@@ -183,9 +181,45 @@ body {
     color: red;
   }
 
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+  }
+
+  .modal-content {
+    background-color: #EA5737;
+    text-align: center;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 40px;
+  }
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
   main.login {
     display: grid;
-
   }
 
   form.signup {
@@ -303,24 +337,6 @@ body {
       background-color: #53A4CF
     }
 
-  #error-wrapper {
-    text-align: center;
-  }
-
-  .error-message {
-    background-color: #EA5737;
-    display: inline-block;
-    border-radius: 40px;
-  }
-
-  #error-holder {
-    color: white;
-    text-align: center;
-    max-width: 500px;
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-
   .in-line-buttons {
     display: flex;
     justify-content: center;
@@ -362,7 +378,7 @@ body {
 
   @media only screen and (max-width: 1350px) and (min-width: 999px) {
     main{
-      grid-template-columns: 1fr 1fr 1fr 
+      grid-template-columns: 1fr 1fr 1fr
     }
   }
 
