--- a/styles.css
+++ b/styles.css
@@ -214,20 +214,38 @@ body {
     display: grid;
   }
 
-  form.signup {
+  /* form.signup {
     margin: 0 auto;
     width: 80%;
     font-size: 16px;
     grid-area: 1 / 1 / span 1 / span 2;
     display: block;
-  }
+  } */
 
-  form.login {
+  div.login {
     margin: 0 auto;
     width: 80%;
     font-size: 16px;
-    grid-area: 1 / 3 / span 1 / span 2;
+    grid-area: 1 / 2 / span 1 / span 2;
     display: block;
+    text-align: center;
+  }
+
+  .login p {
+    color: rgb(255,198,3);
+  }
+
+  .login span {
+    cursor: pointer;
+    color: rgb(46, 96, 180);
+  }
+
+  .login span:hover {
+    color:rgb(255,198,3);
+  }
+
+  .login h2 {
+    color: white;
   }
 
   form, h2 {
