--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
   header img {
     padding-bottom: 10px;
     margin-right: auto;
+    margin-left: auto;
     display: block;
     grid-area: 1 / 2 / span 2 / span 1;
     z-index: 6;
