--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,14 @@ body {
     margin-right: auto;
   }
 
+  span {
+    cursor: pointer;
+  }
+
+  #trainer-name {
+    cursor: default;
+  }
+
   #space-holder {
     display: block;
     margin: auto;
@@ -92,12 +100,6 @@ body {
     max-height: 80%
   }
 
-  #trainer-test{
-    max-height: 500px;
-    width: 300px;
-    border: 5px black;
-  }
-
   .trainer {
     font-size:30px;
     color:rgb(255,198,3);
@@ -129,11 +131,18 @@ body {
     font-family: 'Raleway', sans-serif;
   }
 
+  ul {
+    padding: 0px;
+  }
+
   li {
     font-size: 1.05em;
     font-family: 'Raleway', sans-serif;
     list-style: none;
-    padding-right: 20px;
+  }
+
+  .nav-pokemon {
+    padding-left: 32px;
   }
 
   button {
@@ -470,6 +479,8 @@ body {
   .in-line-buttons {
     display: flex;
     justify-content: center;
+    background-color: rgb(46, 96, 180);
+    color: rgb(255,198,3);
   }
 
   .delete-button {
