--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,12 @@ body {
 
   header {
     background-color: #4caf50;
-    margin: 0 auto;
     height: 120px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 60px 60px;
+    position: fixed;
+    border-bottom: inset rgb(46, 96, 180);
   }
 
   .thumb-nail {
@@ -74,7 +75,7 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     grid-gap: 20px;
-    padding-top: 20px;
+    padding-top: 130px;
     padding-bottom: 30px;
     padding-left: 8px;
     padding-right: 8px;
