--- a/styles.css
+++ b/styles.css
@@ -342,6 +342,26 @@ body {
       margin-left: 2px;
     }
 
+    .evolution-tree {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-rows: auto;
+    }
+
+    #evolves-into {
+      grid-area: 1 / 1 / span 1 / span 2;
+    }
+
+    #evolves-from {
+      grid-area: 1 / 3 / span 1 / span 2;
+    }
+
+    .single-pokemon-holder {
+      grid-area: auto;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     /* Show Teams */
 
     .teams-div {
